# zxcar_all

./: .Xauthority  .bash_history  .bashrc  58-heimarobot.rules  README.md
.ros/: rospack_cache_02946445166995464026  rospack_cache_06526229655093568097  rospack_cache_09966279366220234106  rospack_cache_10059602459287651969  rospack_cache_10858739938169543035  rospack_cache_11475554392707005190  rospack_cache_12085161690898962798  rospack_cache_17301471953202945799  rosstack_cache_02946445166995464026  rosstack_cache_09966279366220234106  rosstack_cache_10059602459287651969  rosstack_cache_10858739938169543035  rosstack_cache_17301471953202945799
.ssh/: known_hosts
hei_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
hei_ws/src/: CMakeLists.txt
hei_ws/src/ros_astra_camera/: 56-orbbec-usb.rules  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml
ithei4_ws/: catkit_make_source.sh
ithei4_ws/devel/: .catkin  setup.sh
ithei4_ws/src/zxcar/: package.xml
ithei4_ws/src/zxcar_nav/: package.xml
redme/: catkit_make_source.sh  clion_start.sh  读我_操作指南_调pid.doc
robot/ithei_ws/devel/: .catkin  .rosinstall  local_setup.sh
ws_ros/devel/: .catkin  setup.sh
zxcar_ws/devel/: .catkin  setup.sh
zxcar_ws/src/zxcar_3d_slam/: .rosinstall  CMakeLists.txt  README.md  package.xml
zxcar_ws/src/zxcar_3d_slam/launch/: darknet.launch  rikirobot_d435_bringup.launch  rikirobot_zed_bringup.launch  rtabmap.launch  slam_3d_d345.launch  slam_3d_zed.launch
zxcar_ws/src/zxcar_3d_slam/scripts/: detection_publisher.py
(+342 files in other folders)
