<?xml version="1.0"?>
<package format="2">
  <name>zxcar_3d_slam</name>
  <version>0.0.0</version>
  <description>The zxcar_3d_slam package</description>

  <maintainer email="xiaokaijun5027@163.com">kaijun</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- message generation -->
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- other dependencies -->
  <exec_depend>rtabmap_ros</exec_depend>
  <exec_depend>darknet_ros</exec_depend>
  <exec_depend>jsk_pcl_ros</exec_depend>
  <exec_depend>jsk_pcl_ros_utils</exec_depend>
</package>
